<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launch"
    android:id="@+id/rootView"
    tools:context=".ui.views.submit.SubmitActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/submitToolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:titleTextColor="@color/textColor"
                android:background="@android:color/transparent"
                />
            <ImageView
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_marginStart="@dimen/margin_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/logo_image"
                android:src="@drawable/gads_header"
                />
            <ImageView
                android:id="@+id/actionBack"
                android:layout_width="@dimen/action_image_size"
                android:layout_height="@dimen/action_image_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/action_back"
                android:layout_marginStart="@dimen/margin_medium"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/project_submission"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/title_size_large"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/border_width"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:background="@drawable/separator_background"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                />
            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin_top_big"
                android:autofillHints="false"
                android:hint="@string/first_name"
                android:inputType="text|textCapWords"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:padding="@dimen/padding_small"
                android:background="@drawable/edittext_background"
                android:layout_marginEnd="@dimen/margin_small"
                app:layout_constraintEnd_toStartOf="@+id/lastNameEditText"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin"
                android:autofillHints="false"
                android:padding="@dimen/padding_small"
                android:background="@drawable/edittext_background"
                android:hint="@string/last_name"
                android:inputType="text|textCapWords"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/firstNameEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/firstNameEditText"
                app:layout_constraintTop_toTopOf="@id/firstNameEditText" />
            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/lastNameEditText"
                app:layout_constraintEnd_toEndOf="@id/lastNameEditText"
                app:layout_constraintTop_toBottomOf="@id/lastNameEditText"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:background="@drawable/edittext_background"
                android:padding="@dimen/padding_small"
                android:autofillHints="false"
                android:inputType="textEmailAddress"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"
                android:hint="@string/email_address"
                />
            <EditText
                android:id="@+id/githubLinkEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/emailEditText"
                app:layout_constraintEnd_toEndOf="@id/emailEditText"
                app:layout_constraintTop_toBottomOf="@id/emailEditText"
                android:layout_marginTop="@dimen/margin_big"
                android:background="@drawable/edittext_background"
                android:padding="@dimen/padding_small"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:autofillHints="false"
                android:inputType="text"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"
                android:hint="@string/github_link"
                />
            <Button
                android:id="@+id/confirmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/textColor"
                android:paddingStart="@dimen/button_padding"
                android:paddingEnd="@dimen/button_padding"
                android:textSize="@dimen/text_size"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:background="@drawable/round_button"
                app:layout_constraintTop_toBottomOf="@id/githubLinkEditText"
                app:layout_constraintStart_toStartOf="@id/githubLinkEditText"
                app:layout_constraintEnd_toEndOf="@id/githubLinkEditText"
                android:layout_marginTop="@dimen/margin_top"
                />
            <ProgressBar
                android:id="@+id/submitProgressBar"
                android:layout_width="@dimen/progress_bar"
                android:layout_height="@dimen/progress_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                android:layout_marginTop="@dimen/margin_top_extra_large"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>